Change navbar title and add word wrap to references (issue on mobile with long url)

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -75,3 +75,7 @@ pre[class*="language-"],
 code[class*="language-"] {
   font-size: 12px;
 }
+
+.wrap-break {
+  word-wrap: break-word;
+}
